<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MassagePregnantWomenActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/bg">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/TextViewMassagePregnantWoomen"
                android:hint="@string/TextViewMassageOver"
                android:textSize="25sp"
                android:fontFamily="@font/old_standard_tt"
                android:layout_marginLeft="130dp"
                android:layout_marginTop="15dp"
                android:padding="4dp"/>



            <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/BtnMassagePregnantWomenFAQ"
                android:background="@drawable/faq"
                android:layout_marginLeft="360dp"
                android:layout_marginTop="20dp"
                android:padding="4dp"/>
        </RelativeLayout>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/transperentborder">


            <Button
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:id="@+id/BtnMassagePregnantAccount"
                android:background="@drawable/transperentborder"
                android:hint="@string/BtnAccount"
                android:fontFamily="@font/old_standard_tt"
                android:padding="4dp"/>


            <Button
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:id="@+id/BtnMassagePregnantServices"
                android:background="@drawable/transperentborder"
                android:layout_marginLeft="120dp"
                android:hint="@string/BtnServices"
                android:fontFamily="@font/old_standard_tt"
                android:padding="4dp"/>



            <Button
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:id="@+id/BtnMassagePregnantSettings"
                android:layout_marginLeft="230dp"
                android:hint="@string/BtnSettings"
                android:fontFamily="@font/old_standard_tt"
                android:background="@drawable/transperentborder"
                android:padding="4dp"/>



            <Button
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:id="@+id/BtnMassagePregnantWomenAbout"
                android:layout_marginLeft="330dp"
                android:hint="@string/BtnAbout"
                android:background="@drawable/transperentborder"
                android:fontFamily="@font/old_standard_tt"
                android:padding="4dp"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@drawable/bg"/>

        <Button
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:id="@+id/BtnPregnantArrow"
            android:background="@drawable/arrow"/>
        
        
        
        <Button
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/BtnMassagePregnantNextPage"
            android:background="@drawable/nextpage"
            android:layout_marginLeft="370dp"/>



        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:id="@+id/ImageViewPregnant"
            android:background="@drawable/massagepregnant"
            android:layout_marginLeft="100dp"
            android:padding="4dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/TextViewMassagePregnant"
            android:hint="@string/TextViewMassagePregnant"
            android:textSize="21sp"
            android:fontFamily="@font/old_standard_tt"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="105dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/TextViewPregnant"
            android:hint="@string/TextViewPregnant"
            android:textSize="20sp"
            android:fontFamily="@font/old_standard_tt"
            android:layout_marginLeft="20dp"
            android:padding="4dp"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/bg">


            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/ImageViewPregnantTime"
                android:background="@drawable/time"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="50dp"
                android:padding="4dp"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/TextViewPregnantTime"
                android:hint="@string/TextViewPregnantTime"
                android:textSize="20sp"
                android:fontFamily="@font/old_standard_tt"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="45dp"/>



            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/ImageViewPregnantCash"
                android:background="@drawable/cash"
                android:layout_marginLeft="320dp"
                android:layout_marginTop="15dp"/>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/TextViewPregnantCash"
                android:hint="@string/TextViewPregnantCash"
                android:textSize="20sp"
                android:fontFamily="@font/old_standard_tt"
                android:layout_marginLeft="290dp"
                android:layout_marginTop="45dp"/>

        </RelativeLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/BtnPregnantRight"
            android:hint="@string/BtnRight"
            android:background="@drawable/btn_bg"
            android:minHeight="@dimen/cardview_compat_inset_shadow"
            android:minWidth="@dimen/cardview_compat_inset_shadow"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="90dp"
            android:layout_marginTop="25dp"
            android:padding="4dp"/>
    </LinearLayout>

</ScrollView>