<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MassageFaceActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/bg">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/TextViewMassageFace"
                android:hint="@string/TextViewMassageOver"
                android:textSize="25sp"
                android:fontFamily="@font/old_standard_tt"
                android:layout_marginLeft="130dp"
                android:layout_marginTop="15dp"
                android:padding="4dp"/>



            <Button
                android:layout_width="50dp"
                android:layout_height="45dp"
                android:id="@+id/BtnMassageFaceFAQ"
                android:background="@drawable/faq"
                android:layout_marginLeft="360dp"
                android:layout_marginTop="20dp"
                android:padding="3dp"/>

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/transperentborder">


            <Button
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:id="@+id/BtnMassageFaceAccount"
                android:background="@drawable/transperentborder"
                android:hint="@string/BtnAccount"
                android:fontFamily="@font/old_standard_tt"
                android:padding="4dp"/>



            <Button
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:id="@+id/BtnMassageFaceServices"
                android:layout_marginLeft="120dp"
                android:background="@drawable/transperentborder"
                android:hint="@string/BtnServices"
                android:fontFamily="@font/old_standard_tt"
                android:padding="4dp"/>


            <Button
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:id="@+id/BtnMassageFaceSettings"
                android:fontFamily="@font/old_standard_tt"
                android:hint="@string/BtnSettings"
                android:layout_marginLeft="230dp"
                android:background="@drawable/transperentborder"
                android:padding="4dp"/>


            <Button
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:id="@+id/BtnMassageFaceAbout"
                android:hint="@string/BtnAbout"
                android:fontFamily="@font/old_standard_tt"
                android:layout_marginLeft="330dp"
                android:background="@drawable/transperentborder"
                android:padding="4dp"/>


        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@drawable/bg"/>

        <Button
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:id="@+id/BtnArrowMassageFace"
            android:background="@drawable/arrow"/>



        <Button
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/nextpage"
            android:layout_marginLeft="370dp"
            android:id="@+id/BtnMassageNextPageFace"/>



        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:id="@+id/ImageViewMassageFace"
            android:background="@drawable/massageface"
            android:layout_marginLeft="100dp"
            android:padding="4dp"/>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="@string/TextViewMassageTotalFace"
            android:textSize="20sp"
            android:id="@+id/TextViewMassageTotalFace"
            android:fontFamily="@font/old_standard_tt"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="15dp"
            android:padding="4dp"/>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="@string/TextViewMassageFace"
            android:textSize="19sp"
            android:id="@+id/TextViewMassage"
            android:fontFamily="@font/old_standard_tt"
            android:layout_marginLeft="20dp"
            android:padding="4dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:background="@drawable/bg">



            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/ImageViewFace"
                android:background="@drawable/time"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="15dp"
                android:padding="4dp"/>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/TextViewMassageFaceTime"
                android:hint="@string/TextViewMassageFaceTime"
                android:textSize="20sp"
                android:fontFamily="@font/old_standard_tt"
                android:layout_marginTop="45dp"
                android:layout_marginLeft="20dp"/>




            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/ImageViewFaceCash"
                android:background="@drawable/cash"
                android:layout_marginLeft="320dp"
                android:layout_marginTop="15dp"
                android:padding="4dp"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:hint="@string/TextViewMassageFaceCash"
                android:id="@+id/TextViewMassageCash"
                android:textSize="20sp"
                android:fontFamily="@font/old_standard_tt"
                android:layout_marginLeft="290dp"
                android:layout_marginTop="45dp"/>



        </RelativeLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/BtnMassageFaceRight"
            android:minWidth="@dimen/cardview_compat_inset_shadow"
            android:minHeight="@dimen/cardview_compat_inset_shadow"
            android:background="@drawable/btn_bg"
            android:padding="4dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="90dp"
            android:hint="@string/BtnRight"/>
    </LinearLayout>

</ScrollView>