<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity"
    android:background="@drawable/bg">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:background="@drawable/bg">


            <ImageView
                android:id="@+id/ImageViewForgotPassword"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_centerInParent="true"
                android:background="@drawable/forgotpassword" />


            <TextView
                android:id="@+id/TextViewForgotPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ImageViewForgotPassword"
                android:layout_centerInParent="true"
                android:layout_marginTop="20dp"
                android:layout_marginRight="200dp"
                android:fontFamily="@font/old_standard_tt"
                android:hint="@string/TextViewForgotPassword"
                android:textSize="30sp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/TextViewForgotPassword1"
                android:hint="@string/TextViewForgotPassword1"
                android:textSize="20sp"
                android:layout_below="@id/TextViewForgotPassword"
                android:fontFamily="@font/old_standard_tt"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"/>



        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="50dp"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/TextViewForgotPasswordEmail"
                android:text="Введіть ваш E-mail"
                android:fontFamily="@font/old_standard_tt"
                android:textSize="20sp"/>



            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/EditTextForgotPasswordEmail"
                android:hint="@string/EditTextForgotPasswordEmail"
                android:inputType="textEmailAddress"
                android:layout_below="@id/TextViewForgotPasswordEmail"
                android:background="@drawable/border"
                android:padding="5dp"/>


            <Button
                android:id="@+id/BtnForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:background="@drawable/btn_bg"
                android:hint="@string/BtnForgotPassword"
                android:minWidth="@dimen/cardview_compat_inset_shadow"
                android:minHeight="@dimen/cardview_compat_inset_shadow"
                android:padding="3dp"
                android:textSize="20sp"
                android:layout_below="@id/EditTextForgotPasswordEmail"
                android:layout_marginTop="100dp"/>




        </RelativeLayout>

    </LinearLayout>









</ScrollView>